--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "export": "npm run build && next export -o _static"
     },
     "dependencies": {
+        "@alch/alchemy-web3": "^1.4.7",
         "@badrap/bar-of-progress": "^0.2.1",
         "@headlessui/react": "^1.6.6",
         "@heroicons/react": "^2.0.7",
