--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "@solana/wallet-adapter-wallets": "^0.18.6",
         "@solana/web3.js": "^1.56.0",
         "date-fns": "^2.29.2",
+        "firebase": "^9.22.2",
         "next": "12.1.5",
         "react": "^18.2.0",
         "react-date-range": "^1.4.0",
